tests/snapshots/update_delete__01_add.snap
---
source: tests/update_delete.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-vZE0rJ/test_update_delete.db
    - add
    - "--key"
    - key
    - "--create-time"
    - "0001-01-01T00:00:00Z"
    - "--update-time"
    - "0001-01-01T00:00:00Z"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
