tests/snapshots/update_delete__02_update_score.snap
---
source: tests/update_delete.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-vZE0rJ/test_update_delete.db
    - update
    - "--key"
    - key
    - "--base-score"
    - "10"
    - "--update-time"
    - "0001-01-01T01:00:00Z"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
