tests/snapshots/update_delete__03_query_after_score_update.snap
---
source: tests/update_delete.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-vZE0rJ/test_update_delete.db
    - query
    - "--now"
    - "0001-01-01T02:00:00Z"
---
success: true
exit_code: 0
----- stdout -----
10.988235294117647	key

----- stderr -----
