tests/snapshots/update_delete__04_update_key.snap
---
source: tests/update_delete.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-vZE0rJ/test_update_delete.db
    - update
    - "--key"
    - key
    - "--new-key"
    - new-key
    - "--update-time"
    - "0001-01-01T02:00:00Z"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
